--- a/package.json
+++ b/package.json
@@ -7,9 +7,11 @@
     "joi": "^14.3.1",
     "moment": "^2.24.0",
     "react": "^16.9.0",
+    "react-addons-transition-group": "^15.6.2",
     "react-dom": "^16.9.0",
     "react-router-dom": "^5.0.1",
     "react-scripts": "3.1.1",
+    "react-transition-group": "^1.2.1",
     "reactstrap": "^8.0.1",
     "semantic-ui-react": "^0.88.0",
     "yup": "^0.27.0"
