--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "doi-regex": "^0.1.10",
+    "dotenv": "^8.1.0",
     "joi": "^14.3.1",
     "moment": "^2.24.0",
     "react": "^16.9.0",
@@ -14,6 +15,7 @@
     "react-transition-group": "^1.2.1",
     "reactstrap": "^8.0.1",
     "semantic-ui-react": "^0.88.0",
+    "unsplash-js": "^5.0.0",
     "yup": "^0.27.0"
   },
   "scripts": {
