--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react-dom": "^16.9.0",
     "react-router-dom": "^5.0.1",
     "react-scripts": "3.1.1",
+    "react-slick": "^0.25.2",
     "react-transition-group": "^1.2.1",
     "reactstrap": "^8.0.1",
     "semantic-ui-react": "^0.88.0",
